bug fix -> krnl workflow polling fixed

--- a/.gitignore
+++ b/.gitignore
@@ -38,6 +38,14 @@ DOCUMENTATION_INDEX.md
 IMPLEMENTATION_SUMMARY.md
 INTEGRATION_GUIDE.md
 INTEGRATION_SUMMARY.md
-x402/
+# x402/
 X402_SDK_QUICK_REFERENCE.md
 X402_SDK_USAGE_GUIDE.md
+
+
+#contracts
+contracts/
+KRNL_WORKFLOW_PATTERN.md
+X402_SETTLEMENT_DEEP_DIVE.md
+/x402
+/test
