--- a/package.json
+++ b/package.json
@@ -7,17 +7,37 @@
     "dev": "tsx watch index.ts",
     "start": "tsx index.ts",
     "build": "tsc",
-    "serve": "node dist/index.js"
+    "serve": "node dist/index.js",
+    "test:client": "tsx test/client.ts",
+    "test:server": "tsx test/server.ts",
+    "test:integration": "tsx test/integration-simple.ts",
+    "test": "npm run test:integration"
   },
   "keywords": ["x402", "payment", "verification", "fastify"],
   "dependencies": {
     "fastify": "^4.28.1",
-    "x402": "^0.7.0",
+    "express": "^4.18.2",
     "axios": "^1.7.2",
-    "viem": "^2.21.26"
+    "viem": "^2.21.26",
+    "node-fetch": "^2.7.0",
+    "dotenv": "^16.3.1",
+    "zod": "^3.24.2",
+    "wagmi": "^2.15.6",
+    "@scure/base": "^1.2.6",
+    "@solana/kit": "^2.1.1",
+    "@solana-program/compute-budget": "^0.8.0",
+    "@solana-program/token": "^0.5.1",
+    "@solana-program/token-2022": "^0.4.2",
+    "@solana/transaction-confirmation": "^2.1.1",
+    "@solana/wallet-standard-features": "^1.3.0",
+    "@wallet-standard/app": "^1.1.0",
+    "@wallet-standard/base": "^1.1.0",
+    "@wallet-standard/features": "^1.1.0"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
+    "@types/express": "^4.17.21",
+    "@types/node-fetch": "^2.6.9",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
   },
