--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@wallet-standard/base": "^1.1.0",
     "@wallet-standard/features": "^1.1.0",
     "axios": "^1.7.2",
+    "canonicalize": "^2.1.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "fastify": "^4.28.1",
