--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "fastify"
   ],
   "dependencies": {
+    "@coinbase/cdp-sdk": "^1.38.5",
+    "@coinbase/coinbase-sdk": "^0.25.0",
+    "@krnl-dev/sdk-react-4337": "^0.1.4",
     "@privy-io/node": "^0.4.0",
     "@scure/base": "^1.2.6",
     "@solana-program/compute-budget": "^0.8.0",
@@ -30,24 +33,26 @@
     "@solana/kit": "^2.1.1",
     "@solana/transaction-confirmation": "^2.1.1",
     "@solana/wallet-standard-features": "^1.3.0",
+    "@tanstack/react-query": "^5.90.7",
     "@wallet-standard/app": "^1.1.0",
     "@wallet-standard/base": "^1.1.0",
     "@wallet-standard/features": "^1.1.0",
     "axios": "^1.7.2",
     "canonicalize": "^2.1.0",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.6.1",
+    "ethers": "^6.15.0",
     "express": "^4.18.2",
     "fastify": "^4.28.1",
     "node-fetch": "^2.7.0",
     "viem": "^2.21.26",
-    "wagmi": "^2.15.6",
+    "wagmi": "^2.19.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.10",
     "@types/node-fetch": "^2.6.9",
-    "tsx": "^4.16.2",
+    "tsx": "^4.20.6",
     "typescript": "^5.5.3"
   },
   "engines": {
